# mj

./: Cargo.toml  flake.nix
mj-application/: Cargo.toml
mj-application/src/: main.rs
mj-core/: Cargo.toml
mj-core/src/: browser.rs  lib.rs
mj-core/src/dom/: parser.rs
mj-core/src/protocol/: http.rs
mj_browser/: Cargo.toml
mj_browser/src/: browser.rs  main.rs  webview.rs  window_backend.rs
mj_browser/src/protocol/: file.rs  handler.rs  http.rs  mod.rs
mj_dom/: Cargo.toml
mj_dom/src/: document.rs  dom_iterator.rs  layout.rs  lib.rs  node.rs  parser.rs  repr.rs  tree.rs
mj_dom/src/nodes/: document.rs  mod.rs
mj_dom/src/nodes/dom_entry/: appending.rs  inserting.rs  merging.rs  mod.rs  relationships.rs
mj_layout/: Cargo.toml
mj_layout/src/: lib.rs
mj_utilities/: Cargo.toml
mj_utilities/src/: actor_iterator.rs  actor_own_map.rs  lib.rs  macros.rs
resources/views/: new.html
src/: browser.rs  cli.rs  main.rs  renderer.rs  webview.rs  window_backend.rs
src/dom/: mod.rs  parser.rs  repr.rs
src/protocol/: file.rs  handler.rs  mod.rs
