[workspace]
members = [
        "mj_*/"
]
default-members =  ["mj_browser"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0"
publish = false

[workspace.dependencies]
html5ever = "0.27"
clap = { version = "4.5.17", features = ["derive"] }
slotmap = "1.0.7"
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
vello = "0.2.1"
winit = "0.30.5"
taffy = "0.5.2"
stakker = "0.2.11"
pollster = "0.3.0"
