[workspace]
members = [
        "mj_*/"
, "mj_layout", "mj_utilities"]
default-members =  ["mj_browser"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0"
publish = false

[workspace.dependencies]
html5ever = "0.27"
clap = { version = "4.5.17", features = ["derive"] }
url = "2.5"
vello = "0.2.1"
winit = "0.30.5"
taffy = "0.5.2"
stakker = { version = "0.2.11", features = ["logger", "inter-thread"]}
pollster = "0.3.0"
hashbrown = "0.15.0"

[workspace.lints.clippy]
cargo = 'deny'
perf = 'deny'

[profile.release]
lto = 'fat'
