[package]
name = "mj_browser"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
clap.workspace = true
url.workspace = true
vello.workspace = true
stakker.workspace = true
pollster.workspace = true
winit.workspace = true
mj_dom.path = "../mj_dom/"
mj_layout.path = "../mj_layout/"
parley = "0.1.0"
ureq = "2.10.1"
stakker_mio = "0.2.5"
stakker_log = "0.1.0"
env_logger = "0.11.5"
log = "0.4.22"

[lints]
workspace = true
